# Exercism

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/hello-world/.exercism/: metadata.json
cpp/lasagna/: lasagna.cpp
cpp/lasagna/.exercism/: metadata.json
cpp/pacman-rules/.exercism/: metadata.json
python/armstrong-numbers/: armstrong_numbers.py
python/armstrong-numbers/.exercism/: metadata.json
python/black-jack/: black_jack.py
python/black-jack/.exercism/: metadata.json
python/bob/: bob.py
python/bob/.exercism/: metadata.json
python/collatz-conjecture/: collatz_conjecture.py
python/collatz-conjecture/.exercism/: metadata.json
python/currency-exchange/: exchange.py
python/currency-exchange/.exercism/: metadata.json
python/darts/: darts.py
python/darts/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: arcade_game.py
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/grains/: grains.py
python/grains/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/isogram/: isogram.py
python/isogram/.exercism/: metadata.json
python/leap/.exercism/: metadata.json
python/little-sisters-vocab/: strings.py
python/little-sisters-vocab/.exercism/: metadata.json
python/meltdown-mitigation/: conditionals.py  conditionals_advanced.py
python/perfect-numbers/: perfect_numbers.py
python/pig-latin/: pig_latin.py
python/raindrops/: raindrops.py
python/triangle/: triangle.py
(+5 files in other folders)
